--- a/easymessage/WebContent/index.html
+++ b/easymessage/WebContent/index.html
@@ -86,7 +86,7 @@
 					
 					<ul class="nav ace-nav">
 						<li class="red"><a data-toggle="dropdown" href="#"
-							class="dropdown-toggle"> <i class="ace-icon fa fa-user"></i>
+							class="dropdown-toggle"><span id="user-id-span"></span> <i class="ace-icon fa fa-user"></i>
 								<i class="ace-icon fa fa-caret-down"></i>
 						</a>
 
