--- a/easymessage/WebContent/index.html
+++ b/easymessage/WebContent/index.html
@@ -67,7 +67,7 @@
 
 			<div class="navbar-container" id="navbar-container">
 				<button type="button" class="navbar-toggle menu-toggler pull-left"
-					id="menu-toggler" data-target="#sidebar" >
+					id="menu-toggler" data-target="#sidebar">
 					<span class="sr-only">Toggle sidebar</span> <span class="icon-bar"></span>
 
 					<span class="icon-bar"></span> <span class="icon-bar"></span>
@@ -83,12 +83,12 @@
 				<div id="login-user-info-div"
 					class="navbar-buttons navbar-header pull-right" role="navigation"
 					style="display: none;">
-					
+
 					<ul class="nav ace-nav">
 						<li class="red"><a data-toggle="dropdown" href="#"
-							class="dropdown-toggle"><span id="user-id-span"></span> <i class="ace-icon fa fa-user"></i>
-								<i class="ace-icon fa fa-caret-down"></i>
-						</a>
+							class="dropdown-toggle"><span id="user-id-span"></span> <i
+								class="ace-icon fa fa-user"></i> <i
+								class="ace-icon fa fa-caret-down"></i> </a>
 
 							<ul
 								class="user-menu dropdown-menu-right dropdown-menu dropdown-yellow dropdown-caret dropdown-close">
@@ -329,8 +329,7 @@
 		src="assets/js/dataTables/jquery.dataTables.bootstrap.js"></script>
 
 	<!-- jquery.dataTables.js -->
-	<script type="text/javascript"
-		src="pages/js/util/push_util.js"></script>
+	<script type="text/javascript" src="pages/js/util/push_util.js"></script>
 	<script type="text/javascript"
 		src="assets/js/bootstrap-datetimepicker.js"></script>
 	<script type="text/javascript"
@@ -345,6 +344,7 @@
 	<script type="text/javascript" src="pages/js/views/push_login_view.js"></script>
 	<script type="text/javascript"
 		src="pages/js/views/push_user_info_view.js"></script>
+	<!-- <script type="text/javascript" src="pages/js/views/push_content_list_view.js"></script> -->
 	<script type="text/javascript" src="pages/js/push_router.js"></script>
 
 
