--- a/easymessage/WebContent/index.html
+++ b/easymessage/WebContent/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" charset="UTF-8"/>
 <meta charset="utf-8" />
 <title>Dashboard - Ace Admin</title>
 
@@ -327,8 +327,15 @@
 		src="assets/js/dataTables/jquery.dataTables.js"></script>
 	<script type="text/javascript"
 		src="assets/js/dataTables/jquery.dataTables.bootstrap.js"></script>
+	<script type="text/javascript"
+		src="assets/js/ace/elements.fileinput.js"></script>
+	<script type="text/javascript" src="assets/js/ace-elements.js"></script>
+	<script type="text/javascript" src="assets/js/ace-elements.js"></script>
+
 
 	<!-- jquery.dataTables.js -->
+	
+	<script type="text/javascript" src="pages/js/util/md5-min.js"></script>
 	<script type="text/javascript" src="pages/js/util/push_util.js"></script>
 	<script type="text/javascript"
 		src="assets/js/bootstrap-datetimepicker.js"></script>
