--- a/easymessage/WebContent/index.html
+++ b/easymessage/WebContent/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" charset="UTF-8"/>
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"
+	charset="UTF-8" />
 <meta charset="utf-8" />
-<title>Dashboard - Ace Admin</title>
+<title>easymessage - web</title>
 
 <meta name="description" content="overview &amp; stats" />
 <meta name="viewport"
@@ -43,14 +44,14 @@
     <script src="assets/js/html5shiv.js"></script>
     <script src="assets/js/respond.js"></script>
 		<![endif]-->
-<script
-	src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.1/jquery.min.js"
-	type="text/javascript"></script>
-<script
-	src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.2/underscore-min.js"
-	type="text/javascript"></script>
-<script
-	src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.2/backbone-min.js"></script>
+<!--[if lt IE 9]>
+<script src="assets/js/html5shiv.js"></script>
+    <script src="assets/js/respond.js"></script>
+<![endif]-->
+
+<script src="assets/js/jquery-1.11.3.min.js" type="text/javascript"></script>
+<script src="assets/js/underscore-min.js" type="text/javascript"></script>
+<script src="assets/js/backbone-min.js"></script>
 <script src=""></script>
 <!-- basic scripts -->
 <script src="assets/js/bootstrap.js"></script>
@@ -334,7 +335,7 @@
 
 
 	<!-- jquery.dataTables.js -->
-	
+
 	<script type="text/javascript" src="pages/js/util/md5-min.js"></script>
 	<script type="text/javascript" src="pages/js/util/push_util.js"></script>
 	<script type="text/javascript"
