--- a/easymessage/WebContent/index.html
+++ b/easymessage/WebContent/index.html
@@ -86,6 +86,35 @@
 					style="display: none;">
 
 					<ul class="nav ace-nav">
+						<li class="red" id="msg-count-li"><a data-toggle="dropdown"
+							class="dropdown-toggle" href="#"> <i
+								class="ace-icon fa fa-bell icon-animated-bell"></i>
+						</a>
+
+							<ul 
+								class="dropdown-menu-right dropdown-navbar navbar-pink dropdown-menu dropdown-caret dropdown-close">
+								<li class="dropdown-header"><i
+									class="ace-icon fa fa-comment"></i> 메시지 발송 건수</li>
+
+								<li class="dropdown-content">
+									<ul class="dropdown-menu dropdown-navbar navbar-pink">
+										<li><a href="#">
+												<div class="clearfix">
+													<span class="pull-left"> 월 발송 건수 </span> <span 
+														class="pull-right badge badge-success"  id="month-count-span">0</span>
+												</div>
+										</a></li>
+
+										<li><a href="#">
+												<div class="clearfix">
+													<span class="pull-left"> 현재 발송 건수 </span> <span
+														class="pull-right badge badge-success" id="today-count-span">0</span>
+												</div>
+										</a></li>
+									</ul>
+								</li>
+
+							</ul></li>
 						<li class="red"><a data-toggle="dropdown" href="#"
 							class="dropdown-toggle"><span id="user-id-span"></span> <i
 								class="ace-icon fa fa-user"></i> <i
@@ -111,141 +140,7 @@
 			<!-- /.navbar-container -->
 		</div>
 
-		<div id="modal-form" class="modal" tabindex="-1">
-			<div class="modal-dialog">
-				<div class="modal-content">
-					<div class="modal-header">
-						<button type="button" class="close" data-dismiss="modal">×</button>
-						<h4 class="blue bigger">Please fill the following form fields</h4>
-					</div>
 
-					<div class="modal-body">
-						<div class="row">
-							<div class="col-xs-12 col-sm-5">
-								<div class="space"></div>
-
-								<label class="ace-file-input ace-file-multiple"><input
-									type="file"><span class="ace-file-container"
-									data-title="Drop files here or click to choose"><span
-										class="ace-file-name" data-title="No File ..."><i
-											class=" ace-icon ace-icon fa fa-cloud-upload"></i></span></span><a
-									class="remove" href="#"><i class=" ace-icon fa fa-times"></i></a></label>
-							</div>
-
-							<div class="col-xs-12 col-sm-7">
-								<div class="form-group">
-									<label for="form-field-select-3">Location</label>
-
-									<div>
-										<select class="chosen-select"
-											data-placeholder="Choose a Country..." style="display: none;">
-											<option value="">&nbsp;</option>
-											<option value="AL">Alabama</option>
-											<option value="AK">Alaska</option>
-											<option value="AZ">Arizona</option>
-											<option value="AR">Arkansas</option>
-											<option value="CA">California</option>
-											<option value="CO">Colorado</option>
-											<option value="CT">Connecticut</option>
-											<option value="DE">Delaware</option>
-											<option value="FL">Florida</option>
-											<option value="GA">Georgia</option>
-											<option value="HI">Hawaii</option>
-											<option value="ID">Idaho</option>
-											<option value="IL">Illinois</option>
-											<option value="IN">Indiana</option>
-											<option value="IA">Iowa</option>
-											<option value="KS">Kansas</option>
-											<option value="KY">Kentucky</option>
-											<option value="LA">Louisiana</option>
-											<option value="ME">Maine</option>
-											<option value="MD">Maryland</option>
-											<option value="MA">Massachusetts</option>
-											<option value="MI">Michigan</option>
-											<option value="MN">Minnesota</option>
-											<option value="MS">Mississippi</option>
-											<option value="MO">Missouri</option>
-											<option value="MT">Montana</option>
-											<option value="NE">Nebraska</option>
-											<option value="NV">Nevada</option>
-											<option value="NH">New Hampshire</option>
-											<option value="NJ">New Jersey</option>
-											<option value="NM">New Mexico</option>
-											<option value="NY">New York</option>
-											<option value="NC">North Carolina</option>
-											<option value="ND">North Dakota</option>
-											<option value="OH">Ohio</option>
-											<option value="OK">Oklahoma</option>
-											<option value="OR">Oregon</option>
-											<option value="PA">Pennsylvania</option>
-											<option value="RI">Rhode Island</option>
-											<option value="SC">South Carolina</option>
-											<option value="SD">South Dakota</option>
-											<option value="TN">Tennessee</option>
-											<option value="TX">Texas</option>
-											<option value="UT">Utah</option>
-											<option value="VT">Vermont</option>
-											<option value="VA">Virginia</option>
-											<option value="WA">Washington</option>
-											<option value="WV">West Virginia</option>
-											<option value="WI">Wisconsin</option>
-											<option value="WY">Wyoming</option>
-										</select>
-										<div class="chosen-container chosen-container-single"
-											style="width: 0px;" title="">
-											<a class="chosen-single" tabindex="-1"><span>&nbsp;</span>
-												<div>
-													<b></b>
-												</div></a>
-											<div class="chosen-drop">
-												<div class="chosen-search">
-													<input type="text" autocomplete="off">
-												</div>
-												<ul class="chosen-results"></ul>
-											</div>
-										</div>
-									</div>
-								</div>
-
-								<div class="space-4"></div>
-
-								<div class="form-group">
-									<label for="form-field-username">Username</label>
-
-									<div>
-										<input type="text" id="form-field-username"
-											placeholder="Username" value="alexdoe">
-									</div>
-								</div>
-
-								<div class="space-4"></div>
-
-								<div class="form-group">
-									<label for="form-field-first">Name</label>
-
-									<div>
-										<input type="text" id="form-field-first"
-											placeholder="First Name" value="Alex"> <input
-											type="text" id="form-field-last" placeholder="Last Name"
-											value="Doe">
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-
-					<div class="modal-footer">
-						<button class="btn btn-sm" data-dismiss="modal">
-							<i class="ace-icon fa fa-times"></i> Cancel
-						</button>
-
-						<button class="btn btn-sm btn-primary">
-							<i class="ace-icon fa fa-check"></i> Save
-						</button>
-					</div>
-				</div>
-			</div>
-		</div>
 
 
 		<div class="main-container" id="main-container">
@@ -262,12 +157,12 @@
 							<i class="ace-icon fa fa-list"></i>
 						</button>
 
-						<button id="sidebar_btn_reservation_list" class="btn btn-warning">
-							<i class="ace-icon fa fa-clock-o"></i>
+						<button id="sidebar_btn_content" class="btn btn-warning">
+							<i class="ace-icon fa fa-file-text-o"></i>
 						</button>
 
-						<button id="sidebar_btn_stats" class="btn btn-danger">
-							<i class="ace-icon fa fa-bar-chart-o"></i>
+						<button id="sidebar_btn_reservation_list" class="btn btn-danger">
+							<i class="ace-icon fa fa-clock-o"></i>
 						</button>
 					</div>
 
@@ -287,6 +182,14 @@
 
 
 					</a></li>
+
+					<li name="sidebar_li" id="sidebar_li_msg_content" class=""><a
+						href="#msg_content"> <i class="menu-icon fa fa-file-text-o"></i>
+							<span class="menu-text"> 상용구 관리 </span>
+
+
+					</a></li>
+
 					<li name="sidebar_li" id="sidebar_li_reservation_list" class="">
 						<a href="#reservation_list"> <i
 							class="menu-icon fa fa-clock-o"></i> <span class="menu-text">
@@ -297,7 +200,7 @@
 					</li>
 					<li name="sidebar_li" id="sidebar_li_stats" class=""><a
 						href="#msg_stats"> <i class="menu-icon fa fa-bar-chart-o"></i>
-							<span class="menu-text"> 통계 </span>
+							<span class="menu-text">월간 통계 </span>
 					</a></li>
 					<li name="sidebar_li" id="sidebar_li_user_info" class=""><a
 						href="#user_info"> <i class="menu-icon fa fa-user"></i> <span
@@ -344,6 +247,8 @@
 		src="assets/js/bootstrap-datetimepicker.js"></script>
 	<script type="text/javascript"
 		src="pages/js/views/push_msg_send_view.js"></script>
+	<script type="text/javascript"
+		src="pages/js/views/push_content_view.js"></script>
 	<script type="text/javascript"
 		src="pages/js/views/push_msg_list_view.js"></script>
 	<script type="text/javascript"
