--- a/easymessage/WebContent/index.html
+++ b/easymessage/WebContent/index.html
@@ -98,16 +98,16 @@
 
 								<li class="dropdown-content">
 									<ul class="dropdown-menu dropdown-navbar navbar-pink">
-										<li><a href="#">
+										<li><a>
 												<div class="clearfix">
-													<span class="pull-left"> 월 발송 건수 </span> <span 
+													<span class="pull-left">이번달 발송 건수 </span> <span 
 														class="pull-right badge badge-success"  id="month-count-span">0</span>
 												</div>
 										</a></li>
 
-										<li><a href="#">
+										<li><a>
 												<div class="clearfix">
-													<span class="pull-left"> 현재 발송 건수 </span> <span
+													<span class="pull-left">금일 발송 건수 </span> <span
 														class="pull-right badge badge-success" id="today-count-span">0</span>
 												</div>
 										</a></li>
