--- a/easymessage/WebContent/index.html
+++ b/easymessage/WebContent/index.html
@@ -25,6 +25,8 @@
 <link rel="stylesheet" href="assets/css/ace.css"
 	class="ace-main-stylesheet" id="main-ace-style" />
 
+<link rel="stylesheet" media="screen" href="assets/css/handsontable.full.css">
+
 <!--[if lte IE 9]>
     <link rel="stylesheet" href="assets/css/ace-part2.css" class="ace-main-stylesheet" />
 		<![endif]-->
@@ -60,6 +62,7 @@
 <script src="assets/js/ace-elements.js"></script>
 
 <script src="assets/js/ace.js"></script>
+<script src="assets/js/handsontable.full.js"></script>
 <!--back bone js-->
 </head>
 <body class="no-skin">
