--- a/easymessage/WebContent/index.html
+++ b/easymessage/WebContent/index.html
@@ -26,6 +26,7 @@
 	class="ace-main-stylesheet" id="main-ace-style" />
 
 <link rel="stylesheet" media="screen" href="assets/css/handsontable.full.css">
+<link rel="shortcut icon" href="assets/images/title_icon.jpg" />
 
 <!--[if lte IE 9]>
     <link rel="stylesheet" href="assets/css/ace-part2.css" class="ace-main-stylesheet" />
